cluster/apps/default/immich-public-proxy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-public-proxy
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: immich-public-proxy
